--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+<!-- Inicio header -->
     <header>
 
 
@@ -66,8 +66,8 @@
                     <p>WELCOME TO CODESHARPER</p>
                 </div>
 
-                <div class="title">
-                    <H1>CONSULTING <br> FOR EVERY <br> BUSINESS</H1>
+                <div>
+                    <H1 class="title">CONSULTING <br> FOR EVERY <br> BUSINESS</H1>
                 </div>
 
 
@@ -76,7 +76,7 @@
                 </div>
         </section>
 
-
+<!-- inicio de seccion de cards -->
         <section class="cards-info">
 
             <div class="conatiner-info">
